<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="item_shoe_name">Name: %s</string>
    <string name="item_shoe_size">Size: %s</string>
    <string name="item_shoe_company">Company: %s</string>
    <string name="item_shoe_description">Description: %s</string>
    <string name="instruction_title">Instruction</string>
    <string name="instruction_description">Here you can learn how this applications works, Enjoy!.</string>
    <string name="instruction_go_action">Go to Shoe List</string>
    <string name="login_title">Login</string>
    <string name="login_email_text">E-mail</string>
    <string name="login_password_text">Password</string>
    <string name="login_action">login</string>
    <string name="login_exist_account_action">Log In exist account</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_description">Shoe apps, were you can found everyting.</string>
    <string name="welcome_go_action">Go to Instruction</string>
    <string name="shoes_list_go_to_description">Go to description</string>
    <string name="shoes_detail_name">Shoe Name</string>
    <string name="shoes_detail_company">Company</string>
    <string name="shoes_detail_shoe_size">Shoe Size</string>
    <string name="shoes_detail_description">Description</string>
    <string name="shoes_detail_save_action">Save</string>
    <string name="shoes_detail_cancel_action">Cancel</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

</resources>
